tests/miniJava/neg/006714_mutation.MiniJava
class java { public static void int [] java ; ( String [ ] java ) { { } } }
